--- a/AbstractDataTypes/Dileep.Practise.DataStructures.AbstractDataTypes.csproj
+++ b/AbstractDataTypes/Dileep.Practise.DataStructures.AbstractDataTypes.csproj
@@ -39,10 +39,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BinaryTreeNode.cs" />
     <Compile Include="LinkedListNode.cs" />
+    <Compile Include="Queue.cs" />
     <Compile Include="SingleLinkedList.cs" />
     <Compile Include="Stack.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="BinaryTree.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
