--- a/Dileep.Practise.DataStructures.Problems/Dileep.Practise.DataStructures.Problems.csproj
+++ b/Dileep.Practise.DataStructures.Problems/Dileep.Practise.DataStructures.Problems.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LinkedLists\NthElementFromEnd.cs" />
+    <Compile Include="LinkedLists\ReverseList.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
