--- a/Dileep.Practise.DataStructures.UnitTests/Dileep.Practise.DataStructures.UnitTests.csproj
+++ b/Dileep.Practise.DataStructures.UnitTests/Dileep.Practise.DataStructures.UnitTests.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BinaryTreeTests.cs" />
     <Compile Include="SingleLinkedListTests.cs" />
     <Compile Include="StackTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
