--- a/Dileep.Practise.Algorithms/Dileep.Practise.Algorithms.csproj
+++ b/Dileep.Practise.Algorithms/Dileep.Practise.Algorithms.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{65808BF8-D271-433C-B701-5E88F2FF0D28}</ProjectGuid>
+    <ProjectGuid>{9DF0735E-284C-4FB3-B36C-C3EDD2E2BE0C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Dileep.Practise.DataStructures.AbstractDataTypes</RootNamespace>
-    <AssemblyName>Dileep.Practise.DataStructures.AbstractDataTypes</AssemblyName>
+    <RootNamespace>Dileep.Practise.Algorithms</RootNamespace>
+    <AssemblyName>Dileep.Practise.Algorithms</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,14 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BinaryTreeNode.cs" />
-    <Compile Include="Heap.cs" />
-    <Compile Include="LinkedListNode.cs" />
-    <Compile Include="Queue.cs" />
-    <Compile Include="SingleLinkedList.cs" />
-    <Compile Include="Stack.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="BinaryTree.cs" />
+    <Compile Include="SortingTechniques\InsertionSort.cs" />
+    <Compile Include="SortingTechniques\SelectionSort.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
